# pico-dshot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  attempts.md  platformio.ini
.playground/: archive_main.cpp  play_timer_irq.cpp  repeating_timer_alarm.cpp
docs/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  main.cpp
examples/dshot_led/: CMakeLists.txt  main.cpp
examples/keyboard_control/: main.cpp
examples/keyboard_control_with_telemetry/: CMakeLists.txt  main.cpp
examples/onewire_telemetry/: main.cpp
examples/simple/: CMakeLists.txt  main.cpp
guppy/: main.cpp
include/: config.h  dshot.h  kissesctelem.h  onewire.h  packet.h
lib/config/: config.h
lib/dshot/: dshot.cpp  dshot.h
lib/shoot/: shoot.cpp  shoot.h
lib/tts/: tts.cpp  tts.h
lib/utils/: utils.cpp  utils.h
src/: dshot.c  main.cpp
test/: CMakeLists.txt  test_dshot.cpp  test_kissesctelem.hpp  test_packet.cpp  test_packet.hpp  test_runner.cpp
